Code generation fixes for avx512

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b96
    • x86
    • generic
    • Not verified

      Debugging on early HW, a number of issues were uncovered which could not be addressed via emulation. These changes include a unified approach with call frames for Evex and pre Evex targets, performance changes for 32 bit Evex performance, general improvements to all x86 targets for reduction patterns, encoding changes for correctness, changes that reduce register pressure for generated code, CPUID additions for additional state control, vector length guards on instructions which only partially support Evex on some targets. Also included are the addition of a state object which is atomic to each instruction emit and which is programmed with specific target information. Reduction of assembler interfaces from 20 to 4. Code which manages the legacy code path for instructions which do not have Evex support but which must manage upper bank resources of registers.

            Assignee:
            Michael Berg (Inactive)
            Reporter:
            Michael Berg (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                Estimated:
                Original Estimate - 8 weeks
                8w
                Remaining:
                Remaining Estimate - 3 days
                3d
                Logged:
                Time Spent - Not Specified Time Not Required
                Not Specified