8140779: Code generation fixes for avx512

Assembler refactoring. Abstract away instruction attributes.

Reviewed-by: kvn, roland, iveresov